--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,3 +26,26 @@ body {
 * {
   box-sizing: border-box;
 }
+
+/* Custom Scrollbar Styles */
+.scrollbar-thin::-webkit-scrollbar {
+  height: 6px;
+  width: 6px;
+}
+
+.scrollbar-track-transparent::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.scrollbar-thumb-blue-900\/60::-webkit-scrollbar-thumb {
+  background-color: rgba(30, 58, 138, 0.6);
+  border-radius: 3px;
+}
+
+.hover\:scrollbar-thumb-blue-800\/80:hover::-webkit-scrollbar-thumb {
+  background-color: rgba(30, 64, 175, 0.8);
+}
+
+.scrollbar-thumb-blue-900\/60::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(30, 64, 175, 0.8);
+}
